--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -1,13 +1,16 @@
 name: Check Style
+
 on: push
 
 jobs:
   check-style:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
 
-      - name: Setup python
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11.3
@@ -16,4 +19,4 @@ jobs:
         run: python -m pip install --upgrade pip pycodestyle
 
       - name: Check Style
-        run: pycodestyle --first *.py
+        run: pycodestyle --first app/*.py
