--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -1,16 +1,13 @@
 name: Check Style
-
 on: push
 
 jobs:
   check-style:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: Setup python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11.3
@@ -19,4 +16,4 @@ jobs:
         run: python -m pip install --upgrade pip pycodestyle
 
       - name: Check Style
-        run: pycodestyle --first app/*.py
+        run: pycodestyle --first *.py
