--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,7 +13,12 @@ jobs:
           python-version: 3.11.3
 
       - name: Install tools
-        run: python -m pip install --upgrade pip pytest
-
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install requests
+          pip install pandas
+          pip install twitchAPI
+          pip install sqlalchemy
       - name: Test with unittest
         run: python3 -m unittest test_t.py
